WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283872
Unreviewed VisionOS Build Fix after
287188@main
https://bugs.webkit.org/show_bug.cgi?id=283872
Summary
Unreviewed VisionOS Build Fix after 287188@main
Chris Dumez
Reported
2024-12-01 09:04:53 PST
VisionOS build fix after
287188@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-12-01 09:05:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37290
EWS
Comment 2
2024-12-01 09:08:08 PST
Committed
287190@main
(6cba0c08b954): <
https://commits.webkit.org/287190@main
> Reviewed commits have been landed. Closing PR #37290 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-01 09:09:16 PST
<
rdar://problem/140752790
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug