Unreviewed VisionOS Build Fix after 287188@main https://bugs.webkit.org/show_bug.cgi?id=283872

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeHost.mm:
(WebKit::RemoteLayerTreeHost::replayDynamicContentScalingDisplayListsIntoBackingStore const):

Canonical link: https://commits.webkit.org/287190@main